--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -8,7 +8,6 @@ footer#main-footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: relative;
   bottom: 0;
-
 }
